# gn10-motor

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  README_ja.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
gn10_motor/: CMakeLists.txt
gn10_motor/include/gn10_motor/: acceleration_limiter.hpp  i_encoder.hpp  i_gate_driver.hpp  motor_controller.hpp  pid.hpp
gn10_motor/src/: motor_controller.cpp
targets/HTMDv2.2c-f303/app/include/app/: a3921_gate_driver.hpp  incremental_encoder.hpp
targets/HTMDv2.2c-f303/app/src/: a3921_gate_driver.cpp  app.cpp  incremental_encoder.cpp
targets/HTMDv2.2c-g431/: CMakeLists.txt
targets/HTMDv2.2c-g431/Core/Src/: main.c  retarget_io.c
targets/HTMDv2.2c-g431/app/: CMakeLists.txt
targets/HTMDv2.2c-g431/app/include/app/: a3921_gate_driver.hpp  incremental_encoder.hpp
targets/HTMDv2.2c-g431/app/src/: a3921_gate_driver.cpp  app.cpp  incremental_encoder.cpp
targets/HTMDv2.2c-g431/cmake/stm32cubemx/: CMakeLists.txt
targets/HTMDv2.2s/: .mxproject  CMakeLists.txt  HTMDv2.2s.ioc
targets/HTMDv2.2s/Core/Inc/: main.h  stm32g4xx_it.h
targets/HTMDv2.2s/Core/Src/: gpio.c  i2c.c  main.c  stm32g4xx_it.c  tim.c  usart.c
targets/HTMDv2.2s/app/: CMakeLists.txt
targets/HTMDv2.2s/app/include/app/: mcp3421.hpp  tmp275.hpp
targets/HTMDv2.2s/app/src/: app.cpp  mcp3421.cpp  my_i2c.cpp  tmp275.cpp
targets/HTMDv2.2s/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
targets/HTMDv2.2s/cmake/stm32cubemx/: CMakeLists.txt
